Fix non-zero realm support in acceptance tests (#10891)
* Increase operator balance to fix `INSUFFICIENT_PAYER_BALANCE` during test cleanup
* Workaround non-zero realm bugs in SDK `AccountId.fromString()` and `AccountId.fromSolidityAddress()`

Signed-off-by: Steven Sheehy <steven.sheehy@swirldslabs.com>